app/assets/stylesheets/_chosen_list_item.scss
@mixin draggable-list-item {
  .menu-list-show-price {
    margin-bottom: 0px;
  }

  .move-list-button {
    margin-right: 20px;
  }

  .list-group-heading {
    font-weight: 700;
  }

  .menu-form-action {
    margin-right: 4px;
  }

  .chosen-list-toggle-detail {
    margin-left: 1rem;

    input {
      margin-left: 0.25rem;
    }
  }

  .image-toggle {
    &:hover {
      cursor: pointer;
    }
  }

  .icon-images-shown {
    color: #3d99f6;
  }

  .list-item-images-choices {
    margin-top: 0.5rem;
  }

  .list-item-image-choice {
    input {
      margin-right: 0.5rem;
    }
    label {
      font-weight: 300;
    }
  }
}

